--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
   height: 2.2rem;
   min-height: 2.2rem;
   position: relative;
+  z-index: 2;
 }
 .top-bar {
   position: absolute;
@@ -89,5 +90,19 @@ body {
 /* Navbar */
 .free-demo {
   margin: 0 1rem 0 auto;
+}
+#nav-links {
+  background-color: aqua;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  min-width: 100vw;
+  min-height: 100vh;
+  text-align: center;
+  padding-top: 25vh;
+}
+#nav-links > * {
+  margin-bottom: 2rem;
 }
 /* position: sticky */
