--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 }
 .btn {
   display: inline-block;
-  padding: 0.5rem;
+  padding: 0.7rem;
   background-color: var(--accent-red);
 }
 .hide {
@@ -52,11 +52,15 @@ body {
 
 /* Hamburger menu */
 #toggle-menu-button {
-  width: 2.2rem;
-  height: 2.2rem;
-  min-height: 2.2rem;
+  width: 2rem;
+  height: 2rem;
   position: relative;
   z-index: 2;
+  border: none;
+  background: none;
+}
+#toggle-menu-botton:focus {
+  outline: none;
 }
 .top-bar {
   position: absolute;
@@ -88,10 +92,22 @@ body {
 }
 
 /* Navbar */
+#logo {
+  z-index: 2;
+}
 .free-demo {
   margin: 0 1rem 0 auto;
+  z-index: 1;
 }
 #nav-links {
+  /* display: none; */
+}
+#nav-links > * {
+  padding-inline: 0.75rem;
+}
+
+/* mobile menu */
+.show-mobile-nav-links {
   background-color: aqua;
   position: absolute;
   top: 0;
@@ -101,8 +117,29 @@ body {
   min-height: 100vh;
   text-align: center;
   padding-top: 25vh;
+  display: flex;
+  flex-direction: column;
 }
-#nav-links > * {
-  margin-bottom: 2rem;
+.show-mobile-nav-links > * {
+  margin-bottom: 11vh;
 }
-/* position: sticky */
+
+/* Media queries */
+@media screen and (max-width: 649px) {
+  #nav-links {
+    display: none;
+  }
+  .show-mobile-nav-links {
+    display: flex !important;
+  }
+}
+@media screen and (min-width: 650px) {
+  #nav-links {
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+  }
+  #toggle-menu-button {
+    display: none;
+  }
+}
