--- a/styles/form.css
+++ b/styles/form.css
@@ -8,11 +8,69 @@ body {
   height: 100vh;
 }
 
+/* --------------------- Form Styling -------------------- */
+#signup-form {
+  display: inline-block;
+  padding: 2em;
+  border-radius: 1.5em;
+  background-color: #499d80;
+}
+
+.form-fields li {
+  margin-bottom: 1em;
+}
+
+.form-fields label {
+  display: block;
+  margin-bottom: 0.7em;
+  color: #fff;
+  text-transform: capitalize;
+}
+
+.form-fields input {
+  font: 400 0.9em/1.6 "Figtree", sans-serif;
+  padding: 0.8em;
+  padding-inline: 1em;
+  border: none;
+  border-radius: 1.5em;
+  width: 100%;
+}
+
+.form-fields input:focus {
+  outline: none;
+}
+
+.required-tag {
+  font-size: 0.7em;
+  color: #ffc5ba;
+}
+
+.optional-tag {
+  font-size: 0.7em;
+  color: #c0ddf0;
+}
+
+#signup-form button {
+  border: none;
+  padding: 1em;
+  border-radius: 1.5em;
+  font: 400 0.7em/1.6 "Figtree", sans-serif;
+}
+
+#signup-btn {
+  width: 100%;
+  font-size: 0.8em !important;
+  background-color: darkslategray;
+  color: #fff;
+}
+
 .continue-as-guest-btn {
   border-radius: 20px;
   width: 100%;
   text-align: center;
   padding-block: 0.6em;
+  background-color: #bddcd1;
+  color: #00462d;
 }
 
 #signup-form {
